fixed scrollbar issue

--- a/public/index.css
+++ b/public/index.css
@@ -24,8 +24,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px;
-    padding-bottom: 16px;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
@@ -58,7 +57,6 @@ h2 {
 body {
     background: #ffffff;
     background-size: cover;
-    width:100%;
 }
 .textIntroduction{
     display:inline;
@@ -73,38 +71,4 @@ body {
     padding-left:70px;
     top:0;
 }
-
-
-
-/* set left hand ui control style
-=================================*/
-input[type=submit] {
-    width: 6em;
-    display:flex;
-    height: 2em;
-    text-align:center;
-    font-size:12px;
-    font-family: Verdana, sans-serif
-}
-
-input[type=radio] {
-    font-family: Verdana, sans-serif
-}
-
-
-/* sub panel creation for ui controls */
-/*
-.uiFieldset {
-    display:inline;
-    width: 450px;
-    height: 600px;
-    text-align:left;
-    top:0;
-    float:left;
-    border: 1px solid silver;
-    padding-top: 9px;
-    border-radius: 4px;
-}
-*/
-
 
